unpackaged/main/default/objects/nbavs__DialList__c/nbavs__DialList__c.object-meta.xml
<CustomObject>
    <label>Dial List</label>
    <nameField>
        <label>Dial List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dial Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>