unpackaged/main/default/objects/nbavs__DialList__c/fields/nbavs__Active__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>