unpackaged/main/default/objects/nbavs__DialList__c/fields/nbavs__AllowDiscardPreview__c.field-meta.xml
<CustomField>
    <fullName>nbavs__AllowDiscardPreview__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Discard Preview</label>
    <type>Checkbox</type>
</CustomField>