unpackaged/main/default/objects/nbavs__DialList__c/fields/nbavs__AllowPreview__c.field-meta.xml
<CustomField>
    <fullName>nbavs__AllowPreview__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Preview</label>
    <type>Checkbox</type>
</CustomField>