unpackaged/main/default/objects/nbavs__DialList__c/fields/nbavs__Audience__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Audience__c</fullName>
    <defaultValue>&quot;Personal&quot;</defaultValue>
    <label>Audience</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Shared</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>