unpackaged/main/default/objects/nbavs__DialList__c/fields/nbavs__CallEndTime__c.field-meta.xml
<CustomField>
    <fullName>nbavs__CallEndTime__c</fullName>
    <defaultValue>TIMEVALUE(&quot;23:59:59&quot;)</defaultValue>
    <label>No Calls After</label>
    <required>true</required>
    <type>Time</type>
</CustomField>