unpackaged/main/default/objects/nbavs__DialList__c/fields/nbavs__CallStartTime__c.field-meta.xml
<CustomField>
    <fullName>nbavs__CallStartTime__c</fullName>
    <defaultValue>TIMEVALUE(&quot;00:00:00&quot;)</defaultValue>
    <label>No Calls Before</label>
    <required>true</required>
    <type>Time</type>
</CustomField>