unpackaged/main/default/objects/nbavs__DialList__c/fields/nbavs__CompletedDialItems__c.field-meta.xml
<CustomField>
    <fullName>nbavs__CompletedDialItems__c</fullName>
    <inlineHelpText>Summary of Completed Dial Items that are in state Completed, Unreachable, Invalid</inlineHelpText>
    <label>CompletedDialItems</label>
    <summaryFilterItems>
        <field>nbavs__DialItemCompleted__c.nbavs__State__c</field>
        <operation>contains</operation>
        <value>Completed, Unreachable, Invalid</value>
    </summaryFilterItems>
    <summaryForeignKey>nbavs__DialItemCompleted__c.nbavs__DialList__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>