unpackaged/main/default/objects/nbavs__DialList__c/fields/nbavs__CompletedItems__c.field-meta.xml
<CustomField>
    <fullName>nbavs__CompletedItems__c</fullName>
    <label>Completed Items</label>
    <summaryFilterItems>
        <field>nbavs__DialItem__c.nbavs__State__c</field>
        <operation>contains</operation>
        <value>Completed, Uncontactable</value>
    </summaryFilterItems>
    <summaryForeignKey>nbavs__DialItem__c.nbavs__DialList__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>