unpackaged/main/default/objects/nbavs__DialList__c/fields/nbavs__CompletedItemsDynamic__c.field-meta.xml
<CustomField>
    <fullName>nbavs__CompletedItemsDynamic__c</fullName>
    <description>Completed dial items related to a dynamic dial list.</description>
    <formula>if( Text(nbavs__Type__c)=&#39;Dynamic&#39;, nbavs__CompletedDialItems__c + nbavs__CompletedItems__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed Items Dynamic</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>