unpackaged/main/default/objects/nbavs__DialList__c/fields/nbavs__DialListSortStrategy__c.field-meta.xml
<CustomField>
    <fullName>nbavs__DialListSortStrategy__c</fullName>
    <defaultValue>&quot;Init&quot;</defaultValue>
    <label>Dial List Sort Strategy</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ListView</fullName>
                <default>true</default>
                <label>Sort All Items</label>
            </value>
            <value>
                <fullName>FIFO</fullName>
                <label>First In First Out</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>