unpackaged/main/default/objects/nbavs__DialList__c/fields/nbavs__ListViewId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ListViewId__c</fullName>
    <label>List View</label>
    <length>18</length>
    <type>Text</type>
</CustomField>