unpackaged/main/default/objects/nbavs__DialList__c/fields/nbavs__ListViewSOQL__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ListViewSOQL__c</fullName>
    <label>Cached SOQL for List View</label>
    <length>20480</length>
    <type>LongTextArea</type>
</CustomField>