unpackaged/main/default/objects/nbavs__DialList__c/fields/nbavs__ListViewSOQLCacheStatus__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ListViewSOQLCacheStatus__c</fullName>
    <defaultValue>&quot;Init&quot;</defaultValue>
    <label>SOQL Caching</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Init</fullName>
                <default>true</default>
                <label>Waiting ...</label>
            </value>
            <value>
                <fullName>Cached</fullName>
            </value>
            <value>
                <fullName>Synced</fullName>
            </value>
            <value>
                <fullName>NoCache</fullName>
                <label>Cache Missing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>