unpackaged/main/default/objects/nbavs__DialList__c/fields/nbavs__ListViewSOQLEnableSync__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ListViewSOQLEnableSync__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Sync With List View</label>
    <type>Checkbox</type>
</CustomField>