unpackaged/main/default/objects/nbavs__DialList__c/fields/nbavs__MaximumDialAttempts__c.field-meta.xml
<CustomField>
    <fullName>nbavs__MaximumDialAttempts__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Maximum Dial Attempts</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>