unpackaged/main/default/objects/nbavs__DialList__c/fields/nbavs__Object__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Object__c</fullName>
    <defaultValue>&quot;Contact&quot;</defaultValue>
    <label>Object</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>