unpackaged/main/default/objects/nbavs__DialList__c/fields/nbavs__OrderBy__c.field-meta.xml
<CustomField>
    <fullName>nbavs__OrderBy__c</fullName>
    <defaultValue>&quot;Name&quot;</defaultValue>
    <label>Order By</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>