unpackaged/main/default/objects/nbavs__DialList__c/fields/nbavs__OrderDirection__c.field-meta.xml
<CustomField>
    <fullName>nbavs__OrderDirection__c</fullName>
    <defaultValue>&quot;ASC&quot;</defaultValue>
    <label>Order Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASC</fullName>
            </value>
            <value>
                <fullName>DESC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>