unpackaged/main/default/objects/nbavs__DialList__c/fields/nbavs__PhoneField__c.field-meta.xml
<CustomField>
    <fullName>nbavs__PhoneField__c</fullName>
    <label>Phone Field</label>
    <length>40</length>
    <type>Text</type>
</CustomField>