unpackaged/main/default/objects/nbavs__DialList__c/fields/nbavs__Progress__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Progress__c</fullName>
    <formula>IF(nbavs__TotalItems__c &gt; 0, nbavs__CompletedItems__c / nbavs__TotalItems__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>