unpackaged/main/default/objects/nbavs__DialList__c/fields/nbavs__QueryLimit__c.field-meta.xml
<CustomField>
    <fullName>nbavs__QueryLimit__c</fullName>
    <defaultValue>50</defaultValue>
    <label>Max Active Dial Items</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>