unpackaged/main/default/objects/nbavs__DialList__c/fields/nbavs__RetryStrategy__c.field-meta.xml
<CustomField>
    <fullName>nbavs__RetryStrategy__c</fullName>
    <defaultValue>&quot;Simple&quot;</defaultValue>
    <label>Retry Strategy</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>Scripted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>