unpackaged/main/default/objects/nbavs__DialList__c/fields/nbavs__SecondaryPhoneField__c.field-meta.xml
<CustomField>
    <fullName>nbavs__SecondaryPhoneField__c</fullName>
    <label>Secondary Phone Field</label>
    <length>40</length>
    <type>Text</type>
</CustomField>