unpackaged/main/default/objects/nbavs__DialList__c/fields/nbavs__Source__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Source__c</fullName>
    <defaultValue>&quot;List View&quot;</defaultValue>
    <label>Data Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>List View</fullName>
            </value>
            <value>
                <fullName>SOQL Query</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>