unpackaged/main/default/objects/nbavs__DialList__c/fields/nbavs__Timeout__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Timeout__c</fullName>
    <defaultValue>20</defaultValue>
    <label>Attempts Timeout (minutes)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>