unpackaged/main/default/objects/nbavs__DialList__c/fields/nbavs__TotalItems__c.field-meta.xml
<CustomField>
    <fullName>nbavs__TotalItems__c</fullName>
    <label>Total Items</label>
    <summaryForeignKey>nbavs__DialItem__c.nbavs__DialList__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>