unpackaged/main/default/objects/nbavs__DialList__c/fields/nbavs__Type__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Type__c</fullName>
    <defaultValue>&quot;Static&quot;</defaultValue>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Static</fullName>
            </value>
            <value>
                <fullName>Dynamic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>