unpackaged/main/default/objects/nbavs__DialList__c/fields/nbavs__User__c.field-meta.xml
<CustomField>
    <fullName>nbavs__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target User</label>
    <referenceTo>nbavs__User__c</referenceTo>
    <relationshipLabel>Dial Lists</relationshipLabel>
    <relationshipName>DialLists</relationshipName>
    <type>Lookup</type>
</CustomField>