unpackaged/main/default/objects/nbavs__DialList__c/fields/nbavs__UseTargetTimeZone__c.field-meta.xml
<CustomField>
    <fullName>nbavs__UseTargetTimeZone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Call Target&#39;s Time Zone</label>
    <type>Checkbox</type>
</CustomField>