unpackaged/main/default/objects/nbavs__DialList__c/validationRules/nbavs__MinMaxQuerySize.validationRule-meta.xml
<ValidationRule>
    <fullName>nbavs__MinMaxQuerySize</fullName>
    <active>true</active>
    <errorConditionFormula>OR(nbavs__QueryLimit__c &lt; 5, nbavs__QueryLimit__c &gt; 2000)</errorConditionFormula>
    <errorMessage>The max active dial items setting must be between 5 and 2000</errorMessage>
</ValidationRule>